--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -265,14 +265,14 @@ h6 {
     font-family: 'Open Sans', sans-serif, Arial, Helvetica;
     font-size:14px;
     font-weight:bold;
-    color:#111;
+    color:white;
 }
 
 
 /* Button Color */
 
 .button, input[type="submit"] {
-    border-color:#111;
+    border-color:white;
 }
 
 
@@ -292,14 +292,14 @@ h6 {
 #banner .button {
     font-family: 'Open Sans', sans-serif, Arial, Helvetica;
     font-size:16px;
-    color:#111;
+    color:white;
 }
 
 
 /* Button Color */
 
 #banner .button {
-    border-color:#111;
+    border-color:white;
 }
 
 
@@ -307,7 +307,7 @@ h6 {
 
 #banner .button:hover {
     color:#d2b356;
-    border-color:#d2b356;
+    border-color:white;
 }
 
 
